Fixing private pub voting problems

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -97,7 +97,7 @@
       <div class="game-container">
         <div class="top">
           <%= image_tag game.home_team.img_url, :class => 'pull-left img-thumbnail' %>
-          <span class="vs">VS.</span>
+          <span class="vs">VS</span>
           <%= image_tag game.away_team.img_url, :class => 'pull-right img-thumbnail' %>
         </div>
         <div class="bottom">
