--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>TFCV3-MOBILE</title>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-  <%= stylesheet_link_tag "mobile", media: "all", "data-turbolinks-track" => true %>
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width">
+  <%= stylesheet_link_tag "foundation", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "normailze", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+
+  <%= javascript_include_tag "jquery", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "modernizr", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "foundation", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "mobile", "data-turbolinks-track" => true %>
 </head>
 <body>
-<div data-role='footer'>
-  <div data-role="navbar">
-    <ul>
-      <li><%= link_to "<i class=\"fa fa-home\"></i> Home".html_safe, games_url %></li>
-      <li><%= link_to "<i class=\"fa fa-pencil-square-o\"></i> Stats".html_safe, stats_url %></li>
-      <li><%= link_to "Teams", teams_url %></li>
-      <% if current_user.present? %>
-        <li><%= link_to "Log Out", sessions_url %></li>
-      <% end %>
-    </ul>
-  </div><!-- /navbar -->
-</div>
   <%= yield %>
 </body>
 </html>
