--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -4,18 +4,64 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>TFCV3-MOBILE</title>
+  <title>The Fan's Challenge</title>
   <%= csrf_meta_tags %>
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <%= stylesheet_link_tag "foundation", media: "all", "data-turbolinks-track" => true %>
-  <%= stylesheet_link_tag "normailze", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "normalize", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 
-  <%= javascript_include_tag "jquery", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "modernizr", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "foundation", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "mobile", "data-turbolinks-track" => true %>
 </head>
 <body>
+<% if current_user.present? %>
+  <nav class="top-bar" data-topbar="">
+      <ul class="title-area">
+        <li class="name">
+          <h1><%= link_to "The Fan's Challenge", games_url %></h1>
+        </li>
+        <li class="toggle-topbar menu-icon"><a href=""><span>Menu</span></a></li>
+      </ul>
+
+
+    <section class="top-bar-section">
+
+        <!-- Right Nav Section -->
+        <ul class="right show-for-large-up">
+          <li><h3><%= link_to "Teams", teams_url %></h3></li>
+          <li class="has-dropdown not-click">
+            <a href="#">Right Button Dropdown</a>
+            <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">Back</a></h5></li>
+              <li><a href="#">First link in dropdown</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class="right hide-for-large-up">
+          <li><h6><%= link_to "Teams", teams_url %></h6></li>
+          <li class="has-dropdown not-click">
+            <a href="#">Right Dropdown</a>
+            <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">Back</a></h5></li>
+              <li><a href="#">First link in dropdown</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <!-- Left Nav Section -->
+        <ul class="left show-for-large-up">
+          <li><a href="#">Left Button</a></li>
+        </ul>
+      </section></nav>
+<% else %>
+
+<% end %>
   <%= yield %>
+  <script type="http://code.jquery.com/jquery-2.0.1.min.js"></script>
+  <%= javascript_include_tag "jquery", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "mobile", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "foundation.min", "data-turbolinks-track" => true %>
+  <script>
+    $(document).foundation();
+  </script>
 </body>
 </html>
