--- a/app/views/users/new.mobile.erb
+++ b/app/views/users/new.mobile.erb
@@ -4,7 +4,7 @@
     margin-top: 200px;
   }
 
-  h6 {
+  .title {
     text-align: center;
     color: white;
   }
@@ -18,7 +18,7 @@
   }
 </style>
 
-<h6>Claim your challenge flag</h6>
+<h6 class='title'>Claim your voice</h6>
 
 <div class="row">
   <div class="small-9 columns small-offset-2">
