Workin on mobile. slow and steady and accurate code wins the race

--- a/app/views/games/show.mobile.erb
+++ b/app/views/games/show.mobile.erb
@@ -11,6 +11,7 @@
 
   .container {
     margin: 10px;
+    text-align: center;
   }
 
   .center {
@@ -25,6 +26,18 @@
     border: 2px solid red;
   }
 
+  .row {
+    margin: 0px;
+  }
+
+  .description {
+    font-family: "Raleway";
+    font-size: 15px;
+  }
+
+  .title {
+    font-family: "Times New Roman"
+  }
 </style>
 
 <% if current_user.username == 'JimmyMow' %>
@@ -56,7 +69,14 @@
     <div class='event-container'>
       <div class="row <%= @style %>">
         <div class="small-12 columns">
-          <%= thing.description %>
+          <h5 class='title'><%= link_to thing.user.username, user_url(thing.user.id) %> Challenged:</h5>
+          <p class='description'><%= thing.description %></p>
+
+          <% if thing.class.to_s == "Challenge" %>
+            <%  %>
+          <% else %>
+
+          <% end %>
         </div>
       </div> <!-- row -->
     </div> <!-- event-container -->
