--- a/app/views/challenges/_form_mobile.mobile.erb
+++ b/app/views/challenges/_form_mobile.mobile.erb
@@ -14,17 +14,15 @@ form {
 
 <div class="row">
   <%= form_for(@challenge) do |f| %>
-    <div class="small-7 columns challenge-form">
+    <div class="small-9 columns challenge-form">
       <%= f.text_field :description, :placeholder => 'Add a challenge...', :class => 'form-control' %>
     </div>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :game_id, value: game_id %>
     <div class="small-2 columns submit">
       <span class="radius">
-        <%= f.button 'Challenge!', :class => 'button', type: 'submit' %>
+        <%= f.button "<i class=\"fa fa-flag\"></i>".html_safe, :class => 'button postfix', type: 'submit' %>
       </span>
     </div>
   <% end %>
 </div> <!-- row -->
-
-
