--- a/app/views/comments/_form_mobile.mobile.erb
+++ b/app/views/comments/_form_mobile.mobile.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment, remote: true, :html =>{ "data-ajax" => false }) do |f| %>
+<%= form_for(@comment, remote: true) do |f| %>
   <%= f.text_field :text, placeholder: 'Write a comment...', :class => 'form-control' %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
 
