--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -18,7 +18,7 @@
   <div class="fixed">
     <nav class="top-bar" data-topbar="">
         <ul class="title-area">
-          <li class="name"><h1><%= link_to "The Fan's Challenge", games_url %></h1></li>
+          <li class="name"><h1><%= link_to "The Fan's Challenge", games_url, :class => 'disagree' %></h1></li>
           <li class="toggle-topbar menu-icon"><a href=""><span>Menu</span></a></li>
         </ul>
 
