--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -1,40 +1,49 @@
-<div class="container">
-  <h1>Stats</h1>
+<style type="text/css">
+  h1, h6 {
+    text-align: center;
+  }
 
-  <ul>
+
+</style>
+
+<div class="container">
+  <h1>Christmas Day Stats</h1>
+  <h6>Brought to you by <span class='disagree'>The Fan's Challenge</span></h6>
+
+  <ol>
     <h3>Refs Who Made Most Calls</h3>
     <% @refs.each do |ref| %>
       <li><%= link_to ref.name, ref_url(ref.id) %> <%= ref.calls.count %></li>
     <% end %>
-  </ul>
+  </ol>
 
-  <ul>
+  <ol>
     <h3>Players Who Commit Most Fouls/Violations</h3>
     <% @commit_players.each do |player| %>
       <li><%= link_to player.name, player_url(player.id) %> <%= player.fouls.count %></li>
     <% end %>
-  </ul>
+  </ol>
 
-  <ul>
+  <ol>
     <h3>Players Who Get Fouled The Most</h3>
     <% @fouled_players.each do |player| %>
       <li><%= link_to player.name, player_url(player.id) %> <%= player.fouls.count %></li>
     <% end %>
-  </ul>
+  </ol>
 
-  <ul>
+  <ol>
     <h3>Teams who foul the most</h3>
     <% @commit_teams.each do |team| %>
       <li><%= link_to team.name, team_url(team.id) %> <%= team.fouls.count %></li>
     <% end %>
-  </ul>
+  </ol>
 
-  <ul>
+  <ol>
     <h3>Teams who get fouled the most</h3>
     <% @fouled_teams.each do |team| %>
       <li><%= link_to team.name, team_url(team.id) %> <%= team.fouls.count %></li>
     <% end %>
-  </ul>
+  </ol>
 </div>
 
 
