--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "Profile", user_url(current_user.id) %></li>
             <li><%= link_to "Settings", edit_user_url(current_user.id) %></li>
-            <li><%= link_to "Contact Us", contact_url %></li>
-             <% if mobile_device? %>
-              <li><%= link_to "Full Site", :mobile => 0 %></li>
-            <% else %>
-              <li><%= link_to "Mobile Site", :mobile => 1 %></li>
-            <% end %>
+            <li><%= link_to "Feedback", contact_url %></li>
             <li class="divider"></li>
             <li><%= link_to "Log Out", sessions_url %></li>
           </ul>
