--- a/app/views/teams/_show.html.erb
+++ b/app/views/teams/_show.html.erb
@@ -5,6 +5,24 @@
   <%= team.coach %>
 </h2>
 
-
-
+<div class="bs-example">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+            <% team.players.each do |player| %>
+          <tr>
+              <td><%= player.number %></td>
+              <td><%= player.name %></td>
+              <td><%= link_to "View Page", player_url(player.id), :class => 'btn btn-danger' %></td>
+          </tr>
+            <% end %>
+        </tbody>
+      </table>
+    </div>
 
