--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,9 @@
+<style type="text/css">
+  .move {
+    margin-top: 10px;
+  }
+</style>
+
 <%= form_for(@user) do |f| %>
     <div>
     <%= f.label :first_name %><br />
@@ -20,6 +26,13 @@
   </div>
 
   <div>
+    <%= f.label :bio %><br />
+    <%= f.text_area :description %>
+  </div>
+
+  <h3>Please enter your password.</h3>
+
+  <div>
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
@@ -30,11 +43,8 @@
   </div>
 
   <div>
-    <%= f.label :bio %><br />
-    <%= f.text_area :description %>
-  </div>
-
-  <div>
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-danger move' %>
   </div>
 <% end %>
+
+
