--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -92,7 +92,7 @@
 
 
       <div class="col-xs-7 pull-right">
-        <h2>Today's Games</h2>
+        <h2>Christmas Games</h2>
       <% @games.reverse.each do |game| %>
       <div class="game-container">
         <div class="top">
